Refactor `ECMA48`: adopt enhanced `instanceof`, switch to `StandardCharsets.UTF_8`, simplify collection initializations, and adjust buffer resizing logic for clarity.